mastering-kube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mastering-kube
  labels:
    apps: web-based
  annotations:
    type: demo
